--- a/javaAPI/pom.xml
+++ b/javaAPI/pom.xml
@@ -56,4 +56,20 @@
 	</dependencies>
 
 
+	<build>
+		<plugins>
+			<plugin>
+				<groupId>org.apache.maven.plugins</groupId>
+				<artifactId>maven-surfire-plugin</artifactId>
+				<version>3.3.0-M5</version>
+				<configuration>
+					<suiteXmlFiles>
+						<suiteXmlFile>src/test/resources/testng.xml</suiteXmlFile>
+					</suiteXmlFiles>
+				</configuration>
+				
+          
+			</plugin>
+		</plugins>
+	</build>
 </project>
