--- a/javaAPI/pom.xml
+++ b/javaAPI/pom.xml
@@ -3,6 +3,11 @@
 	<groupId>com.unosquare</groupId>
 	<artifactId>javaAPI</artifactId>
 	<version>0.0.1-SNAPSHOT</version>
+	<properties>
+		<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
+		<maven.compiler.target>19</maven.compiler.target>
+		<maven.compiler.source>19</maven.compiler.source>
+	</properties>
 
 
 	<dependencies>
@@ -67,9 +72,16 @@
 						<suiteXmlFile>src/test/resources/testng.xml</suiteXmlFile>
 					</suiteXmlFiles>
 				</configuration>
-				
-          
+
+
 			</plugin>
+
+			<plugin>
+				<groupId>org.apache.maven.plugins</groupId>
+				<artifactId>maven-compiler-plugin</artifactId>
+				<version>3.8.0</version>
+			</plugin>
+
 		</plugins>
 	</build>
 </project>
