--- a/javaAPI/pom.xml
+++ b/javaAPI/pom.xml
@@ -5,8 +5,6 @@
 	<version>0.0.1-SNAPSHOT</version>
 	<properties>
 		<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
-		<maven.compiler.target>19</maven.compiler.target>
-		<maven.compiler.source>19</maven.compiler.source>
 	</properties>
 
 
@@ -79,7 +77,11 @@
 			<plugin>
 				<groupId>org.apache.maven.plugins</groupId>
 				<artifactId>maven-compiler-plugin</artifactId>
-				<version>3.8.0</version>
+				<version>3.6.0</version>
+				 <configuration>
+                <source>1.8</source>
+                <target>1.8</target>
+            </configuration>
 			</plugin>
 
 		</plugins>
